// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "system/proto";

import "google/protobuf/empty.proto";

package proto;

//////////////////////////////

service StillAlive {
  rpc StillAlive(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

//////////////////////////////

service Orchestrator {
  rpc RegisterAuth(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc RegisterLeaderboard(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc RegisterRacing(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc RegisterGarage(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

//////////////////////////////

service Authentication {
  rpc Login (PlayerCredentials) returns (AuthResult) {}
  rpc Register (PlayerDetails) returns (AuthResult) {}
}

message PlayerCredentials {
  string username = 1;
  string password = 2;
}

message AuthResult {
  bool result = 1;
}

message PlayerDetails {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

//////////////////////////////

service Racing {
}

//////////////////////////////

service Leaderboard {
}

//////////////////////////////

service Garage {
}